WEB-6125 fixes hero thumbnail position on mobile (#63)

--- a/src/styles/_heros.scss
+++ b/src/styles/_heros.scss
@@ -83,7 +83,7 @@ $overlayGradient: rgba($color-black, 0), $color-black;
         height: 4.5rem;
     }
     @include size-only-mobile {
-        @include position(absolute, null 0 -#{$sizing-3XL} null);
+        @include position(absolute, null 0 #{-$sizing-3XL} null);
 
         img {
             width: $sizing-5XL;
